Fix lots of bugs found from upsream mapbox/earcut